--- a/subscribe.html
+++ b/subscribe.html
@@ -3,19 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" type="x-icon" href="media/Logo.png">
-    <title>Journals</title>
-    <link rel="stylesheet" href="general.css">
-    <link rel="stylesheet" href="home-header.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"><link rel="stylesheet" href="home-header.css">
     <link rel="stylesheet" href="footer.css">
+    <link rel="stylesheet" href="general.css">
+    <link rel="shortcut icon" type="x-icon" href="media/Logo.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <title>Subscribe</title>
 </head>
 <script defer src="home.js"></script>
 
 <body>
-        
+
   <header class="header">
     <div class="header-top" id="headertop">
       <div class="logo-rs" id="logors">
@@ -49,15 +50,14 @@
       
     </div>
   </header> 
-  <div class="coming-soon hidden">
-    <h1 style="margin: 0;">Coming soon
-    </h1>
-    <h3 style="margin: 0;">
-      Journals will be coming soon..
+	<div class="coming-soon hidden">
+    <h1 style="margin: 0;">Coming soon</h1>
+		<h3 style="margin: 0;">
+      Subscription will be coming soon..
     </h3>
   </div>
-  <div class="footer">
+	<div class="footer">
     <p>© 2024 research Sutra. All rights reserved.</p>
-  </div>
+ </div>
 </body>
 </html>
