--- a/index.html
+++ b/index.html
@@ -121,13 +121,11 @@
           Journals
         </button>
       </a>
-
+      <a href="policy.html">  
         <button class="h-button">
           Policy
         </button>
-        <button class="h-button">
-          Services
-        </button>
+      </a>          
         <a href="ojs/index.php">
           <button class="h-button">
             Subscribe
@@ -142,7 +140,7 @@
     </div>
     <div>
       <video autoplay loop muted plays-inline class="rs-vid">
-        <source src="media/Research-vid.webm" type="video/mp4">
+        <source src="media/Research-vid.webm" type="video/webm">
       </video>
     </div>
 
@@ -151,7 +149,7 @@
 
   <section class="publish-your-journal hidden">
     <h1 style="font-size: 54px;">Publish Your Journal</h1>
-    <p>To serve institutions and societies in the journey of publication, Research Sutra will provide a convenient online journal system to support publication journey from submission through peer review to production. The system will be transparent to the Editorial Board.</p>
+    <p style="margin-left: 100px; margin-right: 100px;">To serve institutions and societies in the journey of publication, Research Sutra will provide a convenient online journal system to support publication journey from submission through peer review to production. The system will be transparent to the Editorial Board.</p>
     <p>Research Sutra will host the publication on behalf of the journal owner.</p>
   </section>
   <div class="why-choose-us hidden">
@@ -179,29 +177,36 @@
   </div>
 
   <div class="user-tab hidden">
-    <div class="join-us-text">
-      <h1 style="font-size: 54px;">Join Us</h1>
-
-    </div>
+      <div class="join-us-text">
+        <h1 style="font-size: 54px;">Join Us</h1>
+      </div>
+    
     <div class="user-tab-container">
       <div class="user-tab-actions">
-        <button class="user-tab-action-button">Publish Your Journal</button>
-  
+        <a href="publish-your-journal.html">
+          <button class="user-tab-action-button">Publish Your Journal</button>
+        </a>
       </div>
       <div class="user-tab-actions">
-        <button class="user-tab-action-button">Join as an Editor</button>
+        <a href="join-as-editor.html">
+          <button class="user-tab-action-button">Join as Editor</button>
+        </a>
       </div>
       <div class="user-tab-actions">
-        <button class="user-tab-action-button">Join as Reviewer</button>
+        <a href="join-as-reviewer.html">
+          <button class="user-tab-action-button">Join as Reviewer</button>
+        </a>
       </div>
       <div class="user-tab-actions">
-        <button class="user-tab-action-button">Publish Your Conference</button>
+        <a href="publish-your-conference.html">
+          <button class="user-tab-action-button">Publish your conference</button>
+        </a>
       </div>
     </div>
   </div>
 
   <div class="footer">
-      <p>© 2024 research Sutra. All rights reserved.</p>
+      <p>©2024 research Sutra. All rights reserved.</p>
   </div>
 
 </body>
