--- a/journals.html
+++ b/journals.html
@@ -29,14 +29,15 @@
           Journals
         </button>
       </a>
-
+      <a href="policy.html">  
         <button class="h-button">
           Policy
         </button>
+      </a>
         <button class="h-button">
           Services
         </button>
-        <a href="subscribe.html">
+        <a href="ojs/index.php">
           <button class="h-button">
             Subscribe
           </button>
@@ -49,6 +50,7 @@
       
     </div>
   </header> 
+ 
   <div class="coming-soon hidden">
     <h1 style="margin: 0;">Coming soon
     </h1>
@@ -57,7 +59,7 @@
     </h3>
   </div>
   <div class="footer">
-    <p>© 2024 research Sutra. All rights reserved.</p>
+    <p>©2024 research Sutra. All rights reserved.</p>
   </div>
 </body>
 </html>
