--- a/services.html
+++ b/services.html
@@ -29,14 +29,15 @@
             Journals
           </button>
         </a>
-  
+        <a href="policy.html">  
           <button class="h-button">
             Policy
           </button>
+        </a>
           <button class="h-button">
             Services
           </button>
-          <a href="subscribe.html">
+          <a href="ojs/index.php">
             <button class="h-button">
               Subscribe
             </button>
@@ -48,16 +49,10 @@
           </a>
         
       </div>
-        <div>
-          <video autoplay loop muted plays-inline class="rs-vid">
-            <source src="media/Research-vid.mp4" type="video/mp4">
-          </video>
-        </div>
-    
       </header>
 
     <div class="footer">
-        <p>Research Sutra</p>
+      <p>©2024 research Sutra. All rights reserved.</p>
     </div>
 </body>
 </html>
