--- a/contact-us.html
+++ b/contact-us.html
@@ -3,9 +3,50 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="home-header.css">
+    <link rel="stylesheet" href="footer.css">
+    <link rel="stylesheet" href="general.css">
+    <link rel="shortcut icon" type="x-icon" href="media/Logo.png">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <title>Contact Us</title>
 </head>
 <body>
+    <header class="header">
+        <div class="header-top" id="headertop">
+          <div class="logo-rs" id="logors">
+            <a href="index.html"style="text-decoration: none;">
+              <img src="media/Logo.png" class="logo-img">
+              <h1 style="color: rgba(23,90,98,255);">Research Sutra</h1>
+            </a>
+          </div>
+            <a href="journals.html">
+              <button class="h-button">
+              Journals
+            </button>
+          </a>
+          <a href="policy.html">  
+            <button class="h-button">
+              Policy
+            </button>
+          </a>
+            <button class="h-button">
+              Services
+            </button>
+            <a href="ojs/index.php">
+              <button class="h-button">
+                Subscribe
+              </button>
+            </a>
+            <a href="contact-us.html">
+              <button class="h-button">
+                Contact us
+              </button>   
+            </a>
+          
+        </div>
+      </header> 
     Anju SRB 15 B
 </body>
 </html>
