--- a/subscribe.html
+++ b/subscribe.html
@@ -30,14 +30,15 @@
           Journals
         </button>
       </a>
-
+      <a href="policy.html">  
         <button class="h-button">
           Policy
         </button>
+      </a>
         <button class="h-button">
           Services
         </button>
-        <a href="subscribe.html">
+        <a href="ojs/index.php">
           <button class="h-button">
             Subscribe
           </button>
@@ -57,7 +58,7 @@
     </h3>
   </div>
 	<div class="footer">
-    <p>© 2024 research Sutra. All rights reserved.</p>
+    <p>©2024 research Sutra. All rights reserved.</p>
  </div>
 </body>
 </html>
