--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
     </div>
     <div>
       <video autoplay loop muted plays-inline class="rs-vid">
-        <source src="media/Research-vid.webm" type="video/webm">
+        <source src="media/Research-vid.mp4" type="video/webm">
       </video>
     </div>
 
