--- a/index.html
+++ b/index.html
@@ -46,15 +46,16 @@
       text-align: justify;
       box-shadow: 0px 0px 25px rgba(2, 114, 107, 0.2);
       border-radius: 20px;
-      margin-right: 5px;
-      margin-left: 5px;
+      margin-right: 10px;
+      margin-left: 10px;
+      margin-bottom: 20px;
       color: white;
       background-color:rgba(23,90,98,255);
     }
 
     .wcu-tab{
-      display: grid;
-      grid-template-columns: 1fr 1fr 1fr 1fr;
+      display: flex;
+      flex-direction: column;
     }
 
     .wcu-trans{
